Major upgrade: Modern React + TypeScript + Canvas rebuild
- Complete rewrite with Vite + React 18 + TypeScript
- Canvas-based game rendering with 60fps loop
- Multiple game modes: Classic, No Walls
- 4 difficulty levels: Easy, Medium, Hard, Extreme
- Rainbow snake with colorful segments
- Persistent high scores with Zustand
- Mobile touch controls (D-pad)
- Keyboard controls (Arrow keys + WASD)
- Pause/Resume functionality
- Tailwind CSS styling
- Framer Motion animations
- GitHub Pages deployment workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,28 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
+# Logs
+logs
+*.log
+npm-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Python (legacy)
+__pycache__
+*.pyc
+*.pyo
 .Python
 env/
-.env
 venv/
-.venv/
-
-# IDE
-.vscode/
-.idea/
-
-# OS
-.DS_Store 
