--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.3.0",
+    "howler": "^2.2.4",
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.12",
     "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
